fixes issue with --is-link so it only covers the box

--- a/components/vf-box/vf-box.scss
+++ b/components/vf-box/vf-box.scss
@@ -31,6 +31,7 @@
 }
 
 .vf-box--is-link {
+  position: relative;
   text-decoration: none;
   transition-duration: 250ms;
   transition-property: box-shadow;
